# ansible-role-timesyncd

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml  tasks.yml  tox.ini
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml  prepare.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  vars.yml  verify.yml
molecule/resources/tests/: test_default.py  test_timedatectl.py
molecule/shared/: playbook.yml  prepare.yml  yamllint.yml
molecule/tests/: test_timedatectl.py
molecule/tox/: molecule.yml
molecule/vbox/: build.yml  molecule.yml  prepare.yml
tasks/: main.yml  tasks.yml
templates/etc/systemd/: timesyncd.conf.j2
vars/: Archlinux.yml  Debian.yml  main.yml
